# trade_assistant

./: .gitignore  .prod.env  Dockerfile  README.md  pyproject.toml  requirement.txt  requirements.txt
app/: app.py  consts.py  main.py  settings.py
app/api/: api_healthcheck.py  api_router.py  api_stock_price_info.py
app/schemas/: stock_price_data.py
app/services/: price_data_retrieval.py
bot/: README.md  consts.py
bot/telegram/: tele_bot.py
notebooks/: sample_load_and_visualize.ipynb
tests/trade_assistant/metrics/: test_metrics.py
trade_assistant/: consts.py
trade_assistant/backtest/: strategy_backtesting.py
trade_assistant/database/: db.py  db_pool.py  schema.py
trade_assistant/metrics/: metrics.py
trade_assistant/model/: agent.py  asset.py  consts.py  exchange.py  order.py  price.py  strategy.py  symbol.py
trade_assistant/signal_processing/: base.py  comparison.py  moving_average.py  resistance_support.py
trade_assistant/stock_crawlers/: crawlers.py  stock_lists.py
trade_assistant/stock_crawlers/index_crawler/: README.md  __init__.py  tcbs_index_crawler.py
trade_assistant/stock_crawlers/jobs/: crawl_stock.py  stock_crawl_cronjob_5m.sh  stock_crawl_cronjob_eod.sh
trade_assistant/stock_crawlers/jobs/migrations/: 20231126_add_eod_data.py  20231126_create_stock_5m_db.py  20231126_create_stock_eod_db.py
trade_assistant/strategies/: sample_strategies.py
trade_assistant/utils/: logging.py  utils.py
